--- a/src/main/resources/metadata/ncim.html
+++ b/src/main/resources/metadata/ncim.html
@@ -20,16 +20,12 @@
 </ul>
 <p>
     NCIm contains most public domain terminologies from the National Library of Medicine's
-    <a href="https://www.nlm.nih.gov/research/umls/index.html" target="_blank"
-        alt="UMLS Metathesaurus">UMLS
-        Metathesaurus</a>, as well as many other biomedical terminologies created by or of
+    UMLS Metathesaurus, as well as many other biomedical terminologies created by or of
     interest to NCI and its
     partners. Some proprietary terminologies are included, with permission, and have
     restrictions on their use
     (see <a href="https://ncim.nci.nih.gov/ncimbrowser/pages/source_help_info.jsf" target="_blank"
         alt="details">details</a>). The current version of the NCI
-    Metathesaurus, based on the UMLS build <a
-        href="https://wiki.nci.nih.gov/display/EVS/NCI+Metathesaurus+Changes+Over+Time"
-        target="_blank" alt="2021AA">2021AA</a>, covers up to National Cancer Institute
-    Thesaurus, 21.06e.
+    Metathesaurus, based on the UMLS build 2022AA, covers up to National Cancer Institute
+    Thesaurus, 22.09D.
 </p>
