--- a/src/main/resources/META-INF/resources/webjars/swagger-ui/4.18.2/index.html
+++ b/src/main/resources/META-INF/resources/webjars/swagger-ui/4.18.2/index.html
@@ -10,11 +10,11 @@
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
     <!-- NCI Banner JS -->
     <script src="https://cbiit.github.io/nci-softwaresolutions-elements/components/include-html.js"></script>
+    <script async src="https://assets.adobedtm.com/6a4249cd0a2c/785de09de161/launch-70d67a6a40a8.min.js"></script>
 
   </head>
 
   <body>
-    <include-html src="https://cbiit.github.io/nci-softwaresolutions-elements/banners/government-shutdown.html"></include-html>
     <div id="swagger-ui"></div>
     <script src="./swagger-ui-bundle.js" charset="UTF-8"> </script>
     <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
