--- a/src/main/resources/swagger-ui/index.html
+++ b/src/main/resources/swagger-ui/index.html
@@ -42,7 +42,7 @@
 	<div class="banner2" style="border-bottom: none;">
 		<div>
 			API documentation for interacting with FHIR endpoints. To learn more
-			about how to interact with this api, see the <a href=\"https://github.com/NCIEVS/evsrestapi-client-SDK\">Github
+			about how to interact with this api, see the <a href="https://github.com/NCIEVS/evsrestapi-client-SDK">Github
 				evsrestapi-client-SDK project.</a>
 		</div>
 	</div>
